# a0-nvidia-build-free-provider-plugin

./: .gitignore  LICENSE  README.md  execute.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  refresh-catalog.yml
api/: models.py
catalog/: validated_models.json
ci/: find_plugin_dir.py  install_plugin_via_agent_zero.py  run_agent_zero_integration.sh  run_installed_smoke.py  run_live_provider_smoke.py  update_validated_catalog.py
conf/: model_providers.yaml  model_providers.yaml.template
extensions/python/startup_migration/: _10_render_model_provider.py  _10_render_provider_nvidia_build_free.py
helpers/: catalog.py  probe.py  state.py
state/: tool_call_allow_cache.json
tests/unit/: test_execute_lifecycle.py  test_provider_contract.py
webui/: config.html
